objects/ContentVersion/fields/Custom_N_A_fileupload__c.field-meta.xml
<CustomField>
    <fullName>Custom_N_A_fileupload__c</fullName>
    <description>Hold info from a custom LWC component for custom logic.</description>
    <label>Custom N&amp;A File Upload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>