objects/ContentVersion/fields/Document_Type_fileupload__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_fileupload__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disposal- Manifest</fullName>
            </value>
            <value>
                <fullName>Disposal- BOL</fullName>
            </value>
            <value>
                <fullName>Disposal - Weight Ticket</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Certified Payroll</fullName>
            </value>
            <value>
                <fullName>Job Incident/Spill Report w/Pics</fullName>
            </value>
            <value>
                <fullName>Mark-Up Vendor Invoices</fullName>
            </value>
            <value>
                <fullName>Customer Specific Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>