objects/ContentVersion/fields/IsAllow1Mb__c.field-meta.xml
<CustomField>
    <fullName>IsAllow1Mb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllow1Mb</label>
    <type>Checkbox</type>
</CustomField>