objects/ContentVersion/fields/IsAllow20__c.field-meta.xml
<CustomField>
    <fullName>IsAllow20__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllow20</label>
    <type>Checkbox</type>
</CustomField>