objects/ContentVersion/fields/IsAllow50__c.field-meta.xml
<CustomField>
    <fullName>IsAllow50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllow50</label>
    <type>Checkbox</type>
</CustomField>