objects/ContentVersion/fields/Type_fileupload__c.field-meta.xml
<CustomField>
    <fullName>Type_fileupload__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manifest_BOL</fullName>
            </value>
            <value>
                <fullName>Weight Ticket</fullName>
            </value>
            <value>
                <fullName>EH&amp;S</fullName>
            </value>
            <value>
                <fullName>Site Photo</fullName>
            </value>
            <value>
                <fullName>Customer Specific Doc</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Delivery Ticket</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>