objects/ContentVersion/recordTypes/Content_Version.recordType-meta.xml
<RecordType>
    <fullName>Content_Version</fullName>
    <active>true</active>
    <label>Content Version</label>
    
        
    </RecordType>